src/test/deca/syntax/parser/invalid/multi_line_string_without_class.deca
{
  " I am just a simple
  multi line string"
}

//# output
